# mical

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TASK.md  flake.nix  main.rs  rust-toolchain.toml
crates/config/: Cargo.toml
crates/config/src/: error.rs  eval.rs  json.rs  lib.rs  text_arena.rs
crates/config/src/eval/: joined_str.rs  temporary_string.rs  unescape.rs
crates/config/tests/: query.rs  query_prefix.rs  snapshots.rs  utils.rs
crates/config/tests/cases/: basic_entries.mical  block_string_clip_trailing.mical  block_string_empty_lines_inside.mical  block_string_extra_indent.mical  block_string_folded_keep.mical  block_string_in_prefix.mical  block_string_keep_multi_trailing.mical  comments_directives.mical  invalid_escape.mical  prefix_block.mical  quoted_strings.mical  shebang.mical
crates/config/tests/snapshots/: basic_entries.snap  blank_line_in_prefix_block.snap  blank_lines_between_entries.snap  block_string_0_folded_clip_emptyln_dedent.snap  block_string_0_folded_clip_emptyln_eof.snap  block_string_0_folded_clip_none_dedent.snap  block_string_0_folded_clip_none_eof.snap  block_string_0_folded_clip_none_eof_nonl.snap  block_string_0_folded_clip_wsln_dedent.snap  block_string_0_folded_clip_wsln_eof.snap  block_string_0_folded_keep_emptyln_dedent.snap  block_string_0_folded_keep_emptyln_eof.snap  block_string_0_folded_keep_none_dedent.snap  block_string_0_folded_keep_none_eof.snap  block_string_0_folded_keep_none_eof_nonl.snap  block_string_0_folded_keep_wsln_dedent.snap  block_string_0_folded_keep_wsln_eof.snap  block_string_0_folded_strip_emptyln_dedent.snap  block_string_0_folded_strip_emptyln_eof.snap  block_string_0_folded_strip_none_dedent.snap  block_string_0_folded_strip_none_eof.snap  block_string_0_folded_strip_none_eof_nonl.snap  block_string_0_folded_strip_wsln_dedent.snap  block_string_0_folded_strip_wsln_eof.snap  block_string_0_literal_clip_emptyln_dedent.snap  block_string_0_literal_clip_emptyln_eof.snap  block_string_0_literal_clip_none_dedent.snap  block_string_0_literal_clip_none_eof.snap  block_string_0_literal_clip_none_eof_nonl.snap  block_string_0_literal_clip_wsln_dedent.snap  block_string_0_literal_clip_wsln_eof.snap  block_string_0_literal_keep_emptyln_dedent.snap  block_string_0_literal_keep_emptyln_eof.snap  block_string_0_literal_keep_none_dedent.snap  block_string_0_literal_keep_none_eof.snap  block_string_0_literal_keep_none_eof_nonl.snap  block_string_0_literal_keep_wsln_dedent.snap  block_string_0_literal_keep_wsln_eof.snap  block_string_0_literal_strip_emptyln_dedent.snap  block_string_0_literal_strip_emptyln_eof.snap  (+241 more)
crates/lexer/: Cargo.toml
crates/lexer/src/: cursor.rs  lib.rs
crates/lexer/tests/: macros.rs  simple.rs
crates/parser/: Cargo.toml
crates/parser/src/: event.rs  grammar.rs  lib.rs  parser.rs  token_set.rs
crates/parser/src/grammar/: item.rs  key.rs  value.rs
crates/parser/tests/: block_string.rs  snapshots.rs  snapshots_block_string.rs  snapshots_key_value.rs  snapshots_prefix_block.rs  utils.rs
crates/parser/tests/cases/: hash_edge.mical
crates/parser/tests/cases/block_string/: basic.mical  chomp_keep.mical  empty.mical  empty_line.mical  end_at_outer.mical  fold_style.mical  header_trailing_space.mical
crates/parser/tests/cases/key_value/: boolean_at_eof.mical  hash_value.mical  indented_quoted_key.mical  indented_word_key.mical  integer_at_eof.mical  quoted_key_with_space.mical  quoted_string.mical  quoted_value_trailing.mical  trailing_space.mical  word_key.mical
crates/parser/tests/cases/prefix_block/: basic.mical  missing_close_with_eof.mical  multiple.mical  nested.mical  quoted_key.mical  with_values.mical
crates/parser/tests/snapshots/: basic_entries.snap  blank_line_in_prefix_block.snap  blank_lines_between_entries.snap  block_string_0_folded_clip_emptyln_dedent.snap  block_string_0_folded_clip_emptyln_eof.snap  block_string_0_folded_clip_none_dedent.snap  block_string_0_folded_clip_none_eof.snap  block_string_0_folded_clip_none_eof_nonl.snap  block_string_0_folded_clip_wsln_dedent.snap  block_string_0_folded_clip_wsln_eof.snap  block_string_0_folded_keep_emptyln_dedent.snap  block_string_0_folded_keep_emptyln_eof.snap  block_string_0_folded_keep_none_dedent.snap  block_string_0_folded_keep_none_eof.snap  block_string_0_folded_keep_none_eof_nonl.snap  block_string_0_folded_keep_wsln_dedent.snap  block_string_0_folded_keep_wsln_eof.snap  block_string_0_folded_strip_emptyln_dedent.snap  block_string_0_folded_strip_emptyln_eof.snap  block_string_0_folded_strip_none_dedent.snap  block_string_0_folded_strip_none_eof.snap  block_string_0_folded_strip_none_eof_nonl.snap  block_string_0_folded_strip_wsln_dedent.snap  block_string_0_folded_strip_wsln_eof.snap  block_string_0_literal_clip_emptyln_dedent.snap  block_string_0_literal_clip_emptyln_eof.snap  block_string_0_literal_clip_none_dedent.snap  block_string_0_literal_clip_none_eof.snap  block_string_0_literal_clip_none_eof_nonl.snap  block_string_0_literal_clip_wsln_dedent.snap  block_string_0_literal_clip_wsln_eof.snap  block_string_0_literal_keep_emptyln_dedent.snap  block_string_0_literal_keep_emptyln_eof.snap  block_string_0_literal_keep_none_dedent.snap  block_string_0_literal_keep_none_eof.snap  block_string_0_literal_keep_none_eof_nonl.snap  block_string_0_literal_keep_wsln_dedent.snap  block_string_0_literal_keep_wsln_eof.snap  block_string_0_literal_strip_emptyln_dedent.snap  block_string_0_literal_strip_emptyln_eof.snap  (+240 more)
crates/parser/tests/snapshots/block_string/: basic.snap  chomp_keep.snap  chomp_keep_trailing.snap  chomp_strip.snap  empty.snap  empty_line.snap  end_at_outer.snap  eof.snap  extra_indent.snap  (+7 more)
xtask/: Cargo.toml
xtask/src/: flags.rs  main.rs  utils.rs
xtask/src/commands/: codegen.rs  xtest.rs
xtask/src/commands/codegen/: config.rs  parser.rs  syntax.rs
(+471 files in other folders)
