[workspace]
resolver = "3"
members = [
  "xtask",
  "crates/*"
]

[workspace.package]
version = "0.0.1-dev"
authors = ["ryota2357 <contact@ryota2357.com>"]
edition = "2024"
repository = "https://github.com/ryota2357/mical"
license = "MIT"

[workspace.dependencies]
insta = "1.46.3"
pretty_assertions = "1.4.1"
proptest = "1.10.0"
rowan = "0.16.1"
serde_json = "1.0.149"
smallvec = "1.15.1"
mical_config.path = "./crates/config"
mical_lexer.path = "./crates/lexer"
mical_parser.path = "./crates/parser"
mical_syntax.path = "./crates/syntax"

[package]
name = "mical-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "TODO"

[[bin]]
name = "mical"
path = "main.rs"

[dependencies]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
