[workspace]
resolver = "3"
members = [
  "xtask",
  "crates/*"
]

[workspace.package]
version = "0.0.1-dev"
authors = ["ryota2357 <contact@ryota2357.com>"]
edition = "2024"
repository = "https://github.com/mical-lang/mical"
license = "MIT"

[workspace.dependencies]
insta = "1.46.3"
pretty_assertions = "1.4.1"
proptest = "1.10.0"
rowan = "0.16.1"
serde_json = "1.0.149"
smallvec = "1.15.1"
mical_config.path = "./crates/config"
mical_lexer.path = "./crates/lexer"
mical_parser.path = "./crates/parser"
mical_syntax.path = "./crates/syntax"

[package]
name = "mical-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "CLI for the MICAL configuration language"
readme = "README.md"

[[bin]]
name = "mical"
path = "main.rs"

[dependencies]
clap = { version = "4.5.59", features = ["derive"] }
serde_json.workspace = true
mical_config.workspace = true
mical_lexer.workspace = true
mical_parser.workspace = true
mical_syntax.workspace = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
