[package]
name = "xtask"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow = "1.0.102"
colored = "3.1.1"
convert_case = "0.11.0"
phf = { version = "0.13.1", features = ["macros"] }
proc-macro2 = "1.0.106"
quote = "1.0.44"
ungrammar = "1.16.1"
xflags = "0.3.2"
xshell = "0.2.7"
