[package]
name = "mical_config"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
smallvec.workspace = true
mical_syntax.workspace = true

[dev-dependencies]
proptest = { workspace = true, features = ["attr-macro"] }
