[package]
name = "mical-cli-config"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "Internal config evaluator for mical-cli"

[dependencies]
serde_json = { workspace = true, features = ["raw_value"] }
smallvec.workspace = true
mical-cli-syntax.workspace = true

[dev-dependencies]
insta.workspace = true
pretty_assertions.workspace = true
proptest = { workspace = true, features = ["attr-macro"] }
serde_json.workspace = true
mical-cli-lexer.workspace = true
mical-cli-parser.workspace = true
