[package]
name = "mical-cli-lexer"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "Internal lexer for mical-cli"

[dependencies]
mical-cli-syntax.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
