[package]
name = "mical-cli-parser"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Internal parser for mical-cli"

[dependencies]
rowan.workspace = true
mical-cli-syntax.workspace = true

[dev-dependencies]
insta.workspace = true
mical-cli-lexer.workspace = true
